--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jquery-validateform",
   "version": "1.0.0",
-  "description": "",
+  "description": "1. 如果横向展示tip，input 的父元素定位必须为 position:relative\r 2. 每个input 必须在独立的父元素包围下，且input必须要与左侧label同一等级，否则会出现tip定位错误\r 3. data-vtype 必填，所有需要验证的input都是根据它来查找的\r 4. 当垂直提示方式时，input父元素的高度必须是auto（不能设置固定值）",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +12,14 @@
     "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-less": "^3.3.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/trifling46/jquery.lslValidateForm.git"
+  },
+  "bugs": {
+    "url": "https://github.com/trifling46/jquery.lslValidateForm/issues"
+  },
+  "homepage": "https://github.com/trifling46/jquery.lslValidateForm#readme"
 }
